[package]
name = "fcmprs"
version = "0.1.0"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["threads"]

threads = ["rayon"]

[dependencies]
cfg-if = "1.0.0"
memmap = "0.7.0"
rayon = {version = "1.5.0", optional = true}
smallvec = "1.5.0"
