[package]
name = "fcmprs"
version = "0.1.0"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["threads"]

threads = ["rayon"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
cfg-if = "1.0.0"
memmap = "0.7.0"
once_cell = "1.5.2"
rayon = {version = "1.5.0", optional = true}
smallvec = "1.5.0"
